<resources>
    <string name="app_name">weofapphao</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hometag">对自己的寄语</string>
    <string name="outher1">王浩</string>
    <string name="outher2">许强强</string>
    <string name="outher3">曹智民</string>
    <string name="outher4">阳斌</string>
    <string name="outher5">刘忠虎</string>
    <string name="title_activity_lzh">LZHActivity</string>
    <string name="title_activity_sliding_menu">SlidingMenuActivity</string>
    <string name="title_activity_animator">AnimatorActivity</string>
    <string name="title_activity_object_anim">ObjectAnimActivity</string>
</resources>
