<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/pd_homell"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:text="@string/hometag"
        android:textSize="@dimen/sz_hometag"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:text="王浩:勇往直前,感想敢做"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:text="许强强:"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:text="曹智民:"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:text="阳斌:"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="match_parent"
        android:id="@+id/ll_layout">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/outher1"
            android:id="@+id/auther1"
            android:layout_marginTop="3dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/outher2"
            android:id="@+id/auther2"
            android:layout_marginTop="3dp"
            android:layout_height="wrap_content" />


        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/auther3"
            android:text="@string/outher3"
            android:layout_marginTop="3dp"
            android:layout_height="wrap_content" />




        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/auther4"
            android:text="@string/outher4"
            android:layout_marginTop="3dp"
            android:layout_height="wrap_content" />

    </LinearLayout>






</LinearLayout>